General Bug Fixes (while waiting for linkage). While I'm waiting for the linkage of the categories and products to be figured out, I have been spending my time fixing bugs around the site. Things that need to be fixed before launch. Earlier I fixed the navigation bar search, and after the last commit, I made a few mroe fixes. The relevence filter is just the default filtering, there's no most or least option, so i just changed it to show "Most Relevent", which i think makes sense (tho they aren't really very well organized by most relevent, but this is a setting in the backend. I changed it to prioritize name, which makes it seem a little more logical.) Also the results show 8, but the search is 3 columns, so i forced it to show 9. Oh, I mimiced these changes for the advanced search (which is seperated a bit, but not too much trouble). There was also a lingering right column on the advanced search page. which i removed. we may get into 2 column layouts later, but for now our site is quite purely based on 1 column layout. (except for the checkout, of course). I removed the "Item #" from the product page, as it was wrapping, and I kinda just filled it with bullshit data anyway. it was in the design, but doesn't really make sense, we have a SKU as well. I fixed the 'be the first to review' link. There was a bug where it would go to the tab, but the content of the tab would not change to the review section. this is fixed. I fixed the category slider (the thing at the bottom of the home page), so that it uses just regular links with images in them. This will get crawled better by google (per the suggestion of that SEO linkage article.) Also in this category, i made the login button on the login page a true "submit" button, which isn't a huge thing, but back to semantics, (as that article discussed a lot), it's the proper thing to do, therefor it's prioritized code. (small fix, but those add up.) I also removed some unnecessary fonts from the font resources. downloading u

--- a/skin/frontend/default/rofcustom/css/cart-checkout.css
+++ b/skin/frontend/default/rofcustom/css/cart-checkout.css
@@ -419,14 +419,16 @@ img, button, input {
     .checkout-step1-next-step {
         margin: 20px auto 5px auto;
         float: right;
-        border: none;
-        border-radius: 0;
+        border: none !important;
+        -webkit-border-radius: 0 !important;
+        border-radius: 0 !important;
         background-color: #8a6399;
         background-image: none;
         background-position: center;
         background-repeat: no-repeat;
         text-indent: -10000px;
         height: 30px;
+        text-shadow: none !important;
     }
 
     #checkout-step1-next-step-guest {
